--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "dip721_communitycoin_assets",
+  "name": "ui",
   "version": "0.1.0",
   "description": "Internet Computer starter application",
   "keywords": [
