--- a/package.json
+++ b/package.json
@@ -48,10 +48,12 @@
     "last 2 edge version"
   ],
   "dependencies": {
+    "axios": "^1.1.3",
     "bootstrap": "^5.2.0",
     "jquery": "^3.6.0",
     "react": "^18.2.0",
     "react-bootstrap": "^2.5.0",
+    "react-countdown": "^2.3.3",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.3.0",
     "recharts": "^2.1.15",
