--- a/package.json
+++ b/package.json
@@ -48,9 +48,11 @@
     "last 2 edge version"
   ],
   "dependencies": {
+    "@psychedelic/plug-connect": "^0.1.4",
     "axios": "^1.1.3",
     "bootstrap": "^5.2.0",
     "jquery": "^3.6.0",
+    "js-big-decimal": "^1.3.12",
     "react": "^18.2.0",
     "react-bootstrap": "^2.5.0",
     "react-countdown": "^2.3.3",
