--- a/package.json
+++ b/package.json
@@ -16,15 +16,13 @@
     "copy:types": "rsync -avr .dfx/$(echo ${DFX_NETWORK:-'**'})/canisters/** --exclude='assets/' --exclude='idl/' --exclude='*.wasm' --exclude='*.most' --delete src/declarations"
   },
   "devDependencies": {
-    "@dfinity/agent": "0.13.1",
-    "@dfinity/candid": "0.13.1",
-    "@dfinity/principal": "0.13.1",
     "assert": "2.0.0",
     "buffer": "6.0.3",
     "copy-webpack-plugin": "^9.0.1",
     "css-loader": "^6.7.1",
     "events": "3.3.0",
     "html-webpack-plugin": "5.5.0",
+    "ic-stoic-identity": "^2.0.0",
     "process": "0.11.10",
     "sass": "^1.54.9",
     "sass-loader": "^13.0.2",
@@ -48,6 +46,11 @@
     "last 2 edge version"
   ],
   "dependencies": {
+    "@dfinity/agent": "0.14.0",
+    "@dfinity/auth-client": "^0.14.0",
+    "@dfinity/candid": "0.14.0",
+    "@dfinity/identity": "^0.14.0",
+    "@dfinity/principal": "0.14.0",
     "axios": "^1.1.3",
     "bootstrap": "^5.2.0",
     "jquery": "^3.6.0",
