--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
     "react-bootstrap": "^2.5.0",
     "react-countdown": "^2.3.3",
     "react-dom": "^18.2.0",
+    "react-ga": "^3.3.1",
     "react-router-dom": "^6.3.0",
     "recharts": "^2.1.15",
     "recoil": "^0.7.5"
