--- a/package.json
+++ b/package.json
@@ -22,7 +22,6 @@
     "css-loader": "^6.7.1",
     "events": "3.3.0",
     "html-webpack-plugin": "5.5.0",
-    "ic-stoic-identity": "^2.0.0",
     "process": "0.11.10",
     "sass": "^1.54.9",
     "sass-loader": "^13.0.2",
@@ -46,6 +45,7 @@
     "last 2 edge version"
   ],
   "dependencies": {
+    "@connect2ic/core": "^0.2.0-beta.5",
     "@dfinity/agent": "0.14.0",
     "@dfinity/auth-client": "^0.14.0",
     "@dfinity/candid": "0.14.0",
@@ -57,6 +57,7 @@
     "js-big-decimal": "^1.3.12",
     "react": "^18.2.0",
     "react-bootstrap": "^2.5.0",
+    "react-bootstrap-typeahead": "^6.0.0",
     "react-countdown": "^2.3.3",
     "react-dom": "^18.2.0",
     "react-ga": "^3.3.1",
