--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,5 +7,8 @@
     "moduleResolution": "node",
     "resolveJsonModule": true,
     "allowSyntheticDefaultImports": true
-  }
+  },
+  "include": [
+    "./src/ui/src"
+]
 }
