--- a/package.json
+++ b/package.json
@@ -48,13 +48,15 @@
     "@connect2ic/core": "^0.2.0-beta.5",
     "@dfinity/agent": "0.14.0",
     "@dfinity/auth-client": "^0.14.0",
-    "@dfinity/candid": "0.14.0",
+    "@dfinity/candid": "^0.14.1",
     "@dfinity/identity": "^0.14.0",
     "@dfinity/principal": "0.14.0",
     "axios": "^1.1.3",
     "bootstrap": "^5.2.0",
+    "i": "^0.3.7",
     "jquery": "^3.6.0",
     "js-big-decimal": "^1.3.12",
+    "npm": "^8.19.3",
     "react": "^18.2.0",
     "react-bootstrap": "^2.5.0",
     "react-bootstrap-typeahead": "^6.0.0",
@@ -63,6 +65,7 @@
     "react-ga": "^3.3.1",
     "react-router-dom": "^6.3.0",
     "recharts": "^2.1.15",
-    "recoil": "^0.7.5"
+    "recoil": "^0.7.5",
+    "sha256": "^0.2.0"
   }
 }
