--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "@dfinity/principal": "0.14.0",
     "axios": "^1.1.3",
     "bootstrap": "^5.2.0",
+    "generic-json-sanitizer": "^1.1.3",
     "jquery": "^3.6.0",
     "js-big-decimal": "^1.3.12",
     "react": "^18.2.0",
