--- a/package.json
+++ b/package.json
@@ -51,12 +51,14 @@
     "@dfinity/candid": "^0.14.1",
     "@dfinity/identity": "^0.14.0",
     "@dfinity/principal": "0.14.0",
+    "@types/lodash": "^4.14.189",
     "@types/luxon": "^3.1.0",
     "axios": "^1.1.3",
     "bootstrap": "^5.2.0",
     "generic-json-sanitizer": "^1.1.3",
     "jquery": "^3.6.0",
     "js-big-decimal": "^1.3.12",
+    "lodash": "^4.17.21",
     "luxon": "^3.1.0",
     "react": "^18.2.0",
     "react-bootstrap": "^2.5.0",
