--- a/package.json
+++ b/package.json
@@ -64,6 +64,7 @@
     "react-countdown": "^2.3.3",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.3.0",
+    "react-share": "^4.4.1",
     "recharts": "^2.1.15",
     "recoil": "^0.7.5",
     "sha256": "^0.2.0"
