--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "@dfinity/candid": "^0.14.1",
     "@dfinity/identity": "^0.14.0",
     "@dfinity/principal": "0.14.0",
+    "@psychedelic/plug-inpage-provider": "^2.5.0",
     "@types/lodash": "^4.14.189",
     "@types/luxon": "^3.1.0",
     "axios": "^1.1.3",
